--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 ### NodeModules ###
 03-bases-node/node_modules
+04-por-hacer/node_modules
 
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode
