--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-# File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-
-# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode
-
 ### NodeModules ###
 03-bases-node/node_modules
 04-por-hacer/node_modules
-
-
-# End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode
-
-# Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+05-clima-mundo/node_modules
 
