--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,6 @@
 07-rest-server/node_modules
 08-socket-basico/node_modules
 09-socket-colas/node_modules
+10-socket-chat/node_modules
+11-typescript-mysql/node_modules
 
